k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: veerabank
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
